<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My Expense Tracker</string>
    <string name="title_activity_add_expense">Add New Expense</string>
    <string name="title_activity_display_message">Expense Summary</string>
    <string name="title_activity_view_expense">Expense Details</string>
    <string name="title_activity_about">About</string>
    <string name="action_about">About</string>
    <string name="action_delete_data">Delete All Data</string>
    <string name="action_email_data">Email Data</string>
    <string name="action_email_support">Email Support</string>
    <string name="text_total_expenses">Total Expenses This Month:</string>
    <string name="logo_description">Logo of My Expense Tracker</string>
    <string name="currency_sign">$</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="button_add_expense">Add New Expense</string>
    <string name="button_view_expenses">View Expenses</string>
    <string name="button_save_expense">Save</string>
    <string name="button_change_date">Change</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_delete">Delete</string>
    <string name="expense_cost">Cost:</string>
    <string name="expense_description">Description:</string>
    <string name="expense_type">Type:</string>
    <string name="expense_date">Date:</string>

    <!-- Table Headings -->
    <string name="table_cost">Cost</string>
    <string name="table_description">Description</string>
    <string name="table_type">Type</string>
    <string name="table_date">Date</string>

    <string-array name="expense_types">
        <item>Food</item>
        <item>Groceries</item>
        <item>Transportation</item>
        <item>Utilities</item>
        <item>Home</item>
        <item>Gift</item>
        <item>Miscellaneous</item>
    </string-array>
    <string-array name="months">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
        <item>All</item>
    </string-array>

    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="about_pg_txt">My Expense Tracker, simplest way to track your daily expenses!
	\n\n
	My Expense Tracker was built to provide a simple and easy way to track expenses. 
	\n
	For those who want: \n
	- basic expense tracking \n
	- quick way to add, edit and view expenses \n
	- simple non-bulky app \n
	\n\n
	Designed and built by Bessie Chan
	\n\n Email me at bchan.android.help@gmail.com</string>
	
    <string name="support_email">bchan.android.help@gmail.com</string>

</resources>