<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".DisplayExpensesActivity" >

    <TextView
        android:id="@+id/text_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button_change_search_MonYr"
        android:layout_alignBottom="@+id/button_change_search_MonYr"
        android:layout_alignLeft="@+id/ExpenseTable"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/button_change_search_MonYr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@id/ExpenseTable"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/rounded_button"
        android:onClick="changeSearchMY"
        android:text="@string/button_change_date" />

    <TableRow
        android:id="@+id/ExpenseTable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_change_search_MonYr"
        android:background="@drawable/tablerow_style"
        android:clickable="true"
        android:padding="5dp" >

        <TextView
            android:id="@+id/DateLabel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="25"
            android:background="@drawable/tableheader_style"
            android:text="@string/table_date"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/CostLabel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="25"
            android:background="@drawable/tableheader_style"
            android:text="@string/table_cost"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/DescriptionLabel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:background="@drawable/tableheader_style"
            android:text="@string/table_description"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />
    </TableRow>

    <ScrollView
        android:id="@+id/scrollView_expenseContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/ExpenseTable" >

        <TableLayout
            android:id="@+id/ExpenseTable_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:collapseColumns="3,4" >
        </TableLayout>
    </ScrollView>

</RelativeLayout>